<resources>
    <string name="app_name">Examen</string>
    <string name="registrar">REGISTRAR</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="introduce_tus_apellidos">Introduce tus apellidos</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="item">
        <item>HOMBRE</item>
        <item>MUJER</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>