<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity">

    <EditText
        android:id="@+id/EditTextUsuario"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100sp"
        android:hint="@string/usuario"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Space
        android:id="@+id/Space"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUsuario"/>

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/Space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Space
        android:id="@+id/Space2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/Space2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/botonRegistrar"
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="50sp"
            android:layout_height="20sp"/>

        <Button
            android:id="@+id/botonAcceder"
            android:text="ACCEDER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>